--- a/src/assets/styles/components/home-menu.scss
+++ b/src/assets/styles/components/home-menu.scss
@@ -12,9 +12,14 @@
         border-radius: 100px;
         background: rgba(41, 42, 48, 0.20);
         backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
         @include from(1025px){
             max-width: 100vw;
             overflow: auto;
+        }
+        @include to(1024px){
+            backdrop-filter: none;
+            -webkit-backdrop-filter: none;
         }
         &::-webkit-scrollbar {
             display: none;
@@ -103,6 +108,7 @@
             border-radius: 20px;
             background: rgba(41, 42, 48, 0.20);
             backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
             padding: 40px;
             transform:translateY(-86px);
             @include to(600px){
@@ -115,6 +121,7 @@
             backdrop-filter: none;
             flex-wrap: wrap;
             justify-content: center;
+            padding: 10px;
         }
         &__title {
             margin-left: auto;
