--- a/src/assets/styles/pages/construction.scss
+++ b/src/assets/styles/pages/construction.scss
@@ -56,6 +56,8 @@
     top: 0;
     z-index: -1;
     width: 100%;
+    max-width: 100vw;
+    overflow: hidden;
     img {
         width: 100%;
         height: auto;
