--- a/src/pug/components/form/form.pug
+++ b/src/pug/components/form/form.pug
@@ -24,4 +24,4 @@ mixin form(attr)
 						<path d="M66.5565 11C67.0565 9 69.0565 7.5 71.0565 7" stroke="#F0F1F8" stroke-width="2" stroke-linecap="round" stroke-linejoin="bevel"/>
 					</g>
 				</svg>
-				span(data-btn-submit-text) Здійснити мрію
+				span(data-btn-submit-text) НАДІСЛАТИ ПОВІДОМЛЕННЯ
