--- a/src/pug/includes/popup.pug
+++ b/src/pug/includes/popup.pug
@@ -20,4 +20,4 @@
             .contact-screen-form__group-title Коментар:
             textarea.contact-screen-form__input(type="text" placeholder="Введіть коментар" name="message")
           button(type="submit" data-btn-submit="data-btn-submit").contact-screen-form__button
-            span(data-btn-submit-text) Надіслати повідомлення
+            span(data-btn-submit-text) НАДІСЛАТИ ПОВІДОМЛЕННЯ
