--- a/src/assets/styles/components/build-popup.scss
+++ b/src/assets/styles/components/build-popup.scss
@@ -8,6 +8,7 @@
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: all .25s ease-in-out;
 
 
     &.active {
@@ -160,4 +161,5 @@
 
 [data-build-popup-open] {
     cursor: pointer;
+    
 }
