--- a/src/assets/styles/components/card.scss
+++ b/src/assets/styles/components/card.scss
@@ -105,6 +105,7 @@
                 width: 100%;
                 height: 100%;
                 object-fit: contain;
+                mix-blend-mode: multiply;
             }
         }
     }
@@ -200,6 +201,8 @@
                 width: 100%;
                 height: 100%;
                 object-fit: contain;
+                
+                mix-blend-mode: multiply;
             }
         }
     }
