--- a/src/assets/styles/components/installment-block.scss
+++ b/src/assets/styles/components/installment-block.scss
@@ -21,6 +21,8 @@
         }
         @include to(600px){
             padding: 20px;
+            padding-top: 30px;
+            padding-bottom: 30px;
         }
     }
     &__title {
@@ -43,6 +45,7 @@
         @include to(600px){
             font-size: 28px;
             margin-bottom: 12px;
+            margin-bottom: 20px;
         }
     }
     &__img {
