--- a/src/assets/styles/components/mobile-image-swipe.scss
+++ b/src/assets/styles/components/mobile-image-swipe.scss
@@ -49,13 +49,13 @@
             content: "";
             position: sticky;
             left: 0;
-            top: 0;
+            bottom: 0;
             pointer-events: none;
             width: 100%;
-            height: 100%;
-            background: linear-gradient(180deg, rgba(26, 26, 29, 0.00) 0%, #1A1A1D 100%);
+            height: 65%;
+            background: linear-gradient(180deg, rgba(26, 26, 29, 0) 0%, #1A1A1D 87%);
             display: block;
-            margin-top: -100vh;
+            // margin-top: -100vh;
         }
 
         &>* {
@@ -66,6 +66,7 @@
             height: 100%;
             width: calc((100vh - var(--header-h)) / 11 * 16);
             max-width: none;
+            transform: translateY(-5vh);
         }
     }
 
