--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -16,16 +16,18 @@
         top: 0;
         width: 100%;
         height: 100%;
-        &:after {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            pointer-events: none;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(270deg, rgba(30, 30, 34, 0.00) 0%, rgba(30, 30, 34, 0.50) 100%);
-            z-index: 2;
+        @include from(601px){
+            &:after {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 0;
+                pointer-events: none;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(270deg, rgba(30, 30, 34, 0.00) 0%, rgba(30, 30, 34, 0.50) 100%);
+                z-index: 2;
+            }
         }
         .swiper-container {
             width: 100%;
@@ -55,6 +57,7 @@
         @include to(600px){
             width: 50px;
             height: 50px;
+            bottom: 64px;
         }
         [data-home-down-arrow] {
             transform-origin: center;
@@ -122,7 +125,7 @@
             padding: 8px 20px;
             gap: 12px;
             width: 100%;
-            margin: 6px 0 0 0;
+            margin: var(--page-side-fields) 0 0 0;
             transform: none;
             div {
                 @include text-style-1920-button;
@@ -196,8 +199,12 @@
             padding-left: var(--page-side-fields);
             padding-right: var(--page-side-fields);
         }
+        .text-style-1920-h-1,
+        .text-style-1920-h-2 {
+            text-align: center;
+        }
         &>:nth-child(n+2) {
-            margin-top: 60px;
+            margin-top: 40px;
             @include to(600px){
                 margin-top: 40px;
             }
@@ -209,7 +216,7 @@
     }
     &__label {
         background: var(--color-white);
-        padding: 20px;
+        padding: 20px 40px;
         border-radius: 100px;
         display: flex;
         align-items: center;
@@ -353,6 +360,9 @@
         color: var(--color-black);
         z-index: 2;
         @include to(600px){
+            gap: 12px;
+        }
+        @include to(600px){
             font-size: 18px;
             bottom: auto;
             top: calc(62.5vw + 20px);
@@ -373,6 +383,17 @@
         [data-all] {
             width: 2.5ch;
             display: inline-block;
+            text-align:center;
+        }
+        [data-current] {
+            @include to(600px){
+                margin-right: -4px;
+            }
+        }
+        [data-all] {
+            @include to(600px){
+                margin-left: -4px;
+            }
         }
         @media (hover: hover) {
             &-button {
@@ -461,7 +482,7 @@
         width: 33%;
         cursor: pointer;
         transition: .25s ease-in-out;
-        @include from-to(1025px, 1320px){
+        @include from-to(1025px, 1441px){
             width: 50%;
         }
         @include to(1024px){
@@ -697,18 +718,19 @@
         }
     }
     &__content {
-        padding-bottom: 33%;
-        position: relative;
-        @include to(1024px){
-           padding-bottom: 117%;
-        }
-        iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
+        // padding-bottom: 33%;
+        // position: relative;
+        // @include to(1024px){
+        //    padding-bottom: 117%;
+        // }
+        // #lun-panorama,
+        // iframe {
+        //     position: absolute;
+        //     top: 0;
+        //     left: 0;
+        //     width: 100%;
+        //     height: 100%;
+        // }
     }
 }
 
@@ -843,7 +865,8 @@
             border: 1px solid rgba(239, 240, 247, 0.10);
             display: flex;
             align-items: center;
-            font-family: $default-font;
+            @include text-style-1920-button;
+            transition: .25s ease-in-out;
 
             img {
                 margin-right: 8px;
@@ -854,6 +877,9 @@
             &.active {
                 background-color: var(--color-black);
                 border-color: var(--color-black);
+            }
+            &:hover {
+                background-color: rgba(#979AAF, 0.1);
             }
         }
     }
