--- a/src/assets/styles/pages/single-flat.scss
+++ b/src/assets/styles/pages/single-flat.scss
@@ -158,7 +158,7 @@
     }
 
     @include to(600px) {
-        padding: 14px;
+        padding: 14px 8px;
         font-size: 14px;
     }
     &:not(.active):hover,
