--- a/src/pug/includes/home/home-plannings.pug
+++ b/src/pug/includes/home/home-plannings.pug
@@ -2,24 +2,27 @@
   var bigCards = [
     {
       title: 'Однокімнатні',
+      img: 'https://sofiivka.com.ua/wp-content/uploads/8st_3_01_s.jpg',
       link: '/plannings?filter_rooms_1=1'
     },
     {
       title: 'ДВОКІМНАТНІ',
-      link: '/plannings?filter_rooms_2=2'
+      link: '/plannings?filter_rooms_2=2',
+      img: 'https://sofiivka.com.ua/wp-content/uploads/8st_2_05_s.jpg',
     },
     {
       title: 'ТРИКІМНАТНІ',
+      img: 'https://sofiivka.com.ua/wp-content/uploads/8st_2_01_s.jpg',
       link: '/plannings?filter_rooms_3=3'
     }
   ];
 
   var smallCards = [
-    {link: "/plannings?filter_level_2=2",
+    {link: "/plannings?filter_level_2=2",img: 'https://sofiivka.com.ua/wp-content/uploads/8st_2_05_s.jpg',
     title: 'ДВОРІВНЕВІ',},
-    {link: "/plannings?filter__type_object_2=2",
+    {link: "/plannings?filter__type_object_2=2",img: 'https://sofiivka.com.ua/wp-content/uploads/8st_3_01_s.jpg',
     title: 'КОМЕРЦІЯ',},
-    {link: "/plannings?filter_parking_1=1",
+    {link: "/plannings?filter_parking_1=1", img: 'https://sofiivka.com.ua/wp-content/uploads/8st_2_01_s.jpg',
     title: 'ПАРКІНГИ',},
   ]
 
@@ -35,7 +38,7 @@
             .text-style-1920-h-1.text-color-stroke 48
           .card__img
             .card__img-wrap
-              img(src="./assets/images/home/advantages/test-image.jpg", alt="")
+              img(src=val.img, alt="")
           .card__left-bottom
             .text-style-1920-body-titles Квартир
             .text-style-1920-h-1.text-color-stroke 48
@@ -62,7 +65,7 @@
             div.text-style-1920-h-1 9
           .card-low__img 
             .card-low__img-wrap 
-              img(src="./assets/images/home/advantages/test-image.jpg", alt="")
+              img(src=val.img, alt="")
           .card-low__arrow
             <svg width="81" height="80" viewBox="0 0 81 80" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M64.2304 59.4725L64.2304 15.9416L69.2304 15.9416L69.2304 65.508L69.2304 68.008L66.7304 68.008L17.164 68.008L17.164 63.008L60.6949 63.008L15.3962 17.7094L18.9318 14.1738L64.2304 59.4725Z" fill="url(#paint0_linear_943_520)"/>
@@ -80,6 +83,10 @@
           span Дивитися умови
       .installment-block__img
         .installment-block__img-wrap
-          img(src="./assets/images/home/installment-block.jpg", alt="")
+          <picture>
+            <source srcset="./assets/images/home/installment-block.jpg" media="(min-width: 601px)">
+            <source srcset="./assets/images/home/installment-block-mobile.jpg" media="(max-width: 600px)">
+            <img src="#", alt="", srcset="" loading="lazy"/>
+          </picture>
 
 
