--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -119,8 +119,9 @@ block content
   .home-iframe.g_v_padding#aeroview
     .home-iframe__title.text-style-1920-h-1(data-split-lines) АЕРООБЛІТ
     .home-iframe__content
-      //- iframe(src="https://lun.ua/uk/%D0%B6%D0%BA-%D1%81%D0%BE%D1%84%D1%96%D1%97%D0%B2%D0%BA%D0%B0-%D0%BB%D1%8C%D0%B2%D1%96%D0%B2/%D0%B0%D0%B5%D1%80%D0%BE%D0%BE%D0%B1%D0%BB%D1%96%D1%82", allowfullscreen="allowfullscreen", loading="lazy")
-      iframe(src="", allowfullscreen="allowfullscreen", loading="lazy")
+      <link rel="stylesheet" href="https://aero.lun.ua/panorama.css">
+      <script defer src="https://aero.lun.ua/panorama.js"></script>
+      <div id="lun-panorama" data-building-id="4623"></div>
   include ../includes/home/home-infrastructure.pug
   include ../includes/home/home-construction-screen.pug
   include ../includes/home/home-double-screen.pug
