--- a/src/assets/styles/components/construction-card.scss
+++ b/src/assets/styles/components/construction-card.scss
@@ -51,6 +51,9 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            filter: grayscale(1);
+            -webkit-filter: grayscale(1);
+            transition: .25s ease-out;
         }
     }
     &__text {
@@ -144,24 +147,26 @@
         }
     }
     @media (hover: hover) {
-        overflow: hidden;
+    }
+    overflow: hidden;
+    transition: .25s ease-out;
+    &__text,
+    &__button {
         transition: .25s ease-out;
-        &__text,
-        &__button {
-            transition: .25s ease-out;
-        }
-        &:hover {
-            border-color: var(--color-yellow);
-        }
-        &:hover &__text,
-        &:hover &__button {
-            border-color: var(--color-yellow);
-        }
-        img{
-            transition: .25s ease-out;
-        }
-        &:hover img {
-            transform: scale(1.05);
-        }
+    }
+    &:hover {
+        border-color: var(--color-yellow);
+    }
+    &:hover &__text,
+    &:hover &__button {
+        border-color: var(--color-yellow);
+    }
+    img{
+        transition: .25s ease-out;
+    }
+    &:hover img {
+        transform: scale(1.05);
+        filter: grayscale(0);
+        -webkit-filter: grayscale(0);
     }
 }
