--- a/src/assets/styles/components/mobile-image-swipe.scss
+++ b/src/assets/styles/components/mobile-image-swipe.scss
@@ -42,9 +42,10 @@
         width: 100%;
         overflow-x: auto;
         overflow-y: hidden;
-        pointer-events: none;
+        // pointer-events: none;
         height: 100%;
         position: relative;
+        // overscroll-behavior: none;
         &:after {
             content: "";
             position: sticky;
