--- a/src/assets/styles/layouts/home/home-double-screen.scss
+++ b/src/assets/styles/layouts/home/home-double-screen.scss
@@ -3,6 +3,7 @@
     padding-left: 15.625%;
     padding-right: 15.625%;
     padding-bottom: var(--section-v-offset);
+    overflow: hidden;
     @include from-to(1025px, 1380px){
         padding-left: 100px;
         padding-right: 100px;
@@ -19,6 +20,15 @@
         width: 100%;
         height: 100%;
         z-index: -1;
+        &:after {
+            content:'';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 20%;
+            background: linear-gradient(180deg, #1A1A1D 0%, rgba(26, 26, 29, 0.90) 25%, rgba(26, 26, 29, 0.00) 100%);
+        }
         img {
             width: 100%;
             height: 100%;
@@ -204,12 +214,26 @@
     flex-direction: column;
     justify-content: center;align-items: center;
     text-decoration: none;
+    transition: .25s ease-in-out;
+    svg,
+    span {
+        transition: .25s ease-in-out;
+    }
     svg path {
         transform-origin: center;
         transform-box: fill-box;
     }
     &:hover path {
         animation: developerLinkAnimation 0.75s infinite;
+    }
+    &:hover {
+        transform: scale(1.05);
+        span {
+            transform: scale(0.95) translateY(20px);
+        }
+        svg {
+            transform: rotate(45deg);
+        }
     }
 }
 
@@ -229,4 +253,101 @@
     100% {
         transform: translateY(20px); 
     }
+}
+
+body {
+	--button-border-radius: 50%;
+    --button-bg: transparent;
+    --button-stroke: #ce1352;
+    --button-stroke-width: 1px;
+    --button-text: #ffffff;
+    --button-bg-hover: transparent;
+    --button-stroke-hover: #ce1352;
+    --button-stroke-width-hover: 1px;
+    --button-text-hover: #ffffff;
+    --cursor-stroke: #fff;
+    --cursor-fill: #fff;
+    --cursor-stroke-width: 1px;
+    --color-text: #ffffff;
+    --color-bg: #312b35;
+    --color-link: #89639e;
+    --color-link-hover: #ce1352;
+    --button-filler: #ce1352;
+}
+
+.button {
+	cursor: pointer;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	color: var(--button-text);
+	border: 0;
+	background: none;
+	width: 10rem;
+	height: 10rem;
+	padding: 0;
+	margin: 1rem;
+	font-family: inherit;
+	font-size: 1.7rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.button:focus,
+.button--hover {
+	outline: none;
+	border-width: var(--button-stroke-width-hover);
+	border-color: var(--button-stroke-hover);
+	color: var(--button-text-hover);
+	background: var(--button-bg-hover);
+}
+
+.button__deco {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	border-width: var(--button-stroke-width);
+	border-color: var(--button-stroke);
+	border-style: solid;
+	border-radius: var(--button-border-radius);
+	background: var(--button-bg);
+}
+
+.button__deco-filler {
+	background: var(--button-filler);
+	position: absolute;
+	width: 150%;
+	height: 200%;
+	border-radius: 50%;
+	top: -50%;
+	left: -25%;
+	transform: translate3d(0,75%,0);
+}
+
+.button__text, 
+.button__text-inner {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+}
+
+
+@media (any-pointer: fine) {
+	.cursor {
+		position: fixed;
+		top: 0;
+		left: 0;
+		display: block;
+		pointer-events: none;
+	}
+	.cursor__inner {
+		fill: var(--cursor-fill);
+		stroke: var(--cursor-stroke);
+		stroke-width: var(--cursor-stroke-width);
+	}
 }
