--- a/src/pug/pages/plannings.pug
+++ b/src/pug/pages/plannings.pug
@@ -92,6 +92,12 @@ block content
               .planning-card__image-wrap
                 img(src="./assets/images/test-plan.png", alt="", srcset="")
             .planning-card__bottom Будинок: 3 Секція: 2 Поверх: 15
+      .plannings__load-more
+        button(data-more type="button").button-main
+          span ПОКАЗАТИ БІЛЬШЕ ПЛАНУВАНЬ
+          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.99988 14.3638L7.64633 14.0103L1.98948 8.35343C1.79421 8.15816 1.79421 7.84158 1.98948 7.64632C2.18474 7.45106 2.50132 7.45106 2.69658 7.64632L7.49988 12.4496L7.49988 2.34302C7.49988 2.06688 7.72374 1.84302 7.99988 1.84302C8.27603 1.84302 8.49988 2.06688 8.49988 2.34302L8.49988 12.4496L13.3032 7.64632C13.4984 7.45106 13.815 7.45106 14.0103 7.64632C14.2056 7.84158 14.2056 8.15816 14.0103 8.35343L8.35344 14.0103L7.99988 14.3638Z" fill="#1A1A1D"/>
+          </svg>
   include ../includes/contact-screen.pug
 block footer
   include ../includes/footer.pug
