--- a/src/assets/styles/assets/base.scss
+++ b/src/assets/styles/assets/base.scss
@@ -344,6 +344,9 @@ input[type=number]::-webkit-outer-spin-button {
 	text-transform: uppercase;
 	overflow: hidden;
 	transform: translateZ(0);
+	&.hidden {
+		display: none;
+	}
 	&--light {
 		background: var(--color-white);
 	}
@@ -361,7 +364,7 @@ input[type=number]::-webkit-outer-spin-button {
 			top: 0;
 			width: 100%;
 			height: 100%;
-			background: linear-gradient(103deg, #7DB928 0%, #E0DD00 100%);
+			background: linear-gradient(103deg, #7DB928 47%, #E0DD00 100%);
 			z-index: -1;
 			opacity: 0;
 			transition: .55s ease-out;
