commerce filter fix

--- a/src/pug/includes/home/home-plannings.pug
+++ b/src/pug/includes/home/home-plannings.pug
@@ -20,7 +20,7 @@
   var smallCards = [
     {link: "/plannings?filter_level_2=2",img: 'https://sofiivka.com.ua/wp-content/uploads/8st_2_05_s.jpg',
     title: 'ДВОРІВНЕВІ',},
-    {link: "/plannings?filter__type_object_2=2",img: 'https://sofiivka.com.ua/wp-content/uploads/8st_3_01_s.jpg',
+    {link: "/plannings?filter_objecttype_2=2",img: 'https://sofiivka.com.ua/wp-content/uploads/8st_3_01_s.jpg',
     title: 'КОМЕРЦІЯ',},
     {link: "/plannings?filter_parking_1=1", img: 'https://sofiivka.com.ua/wp-content/uploads/8st_2_01_s.jpg',
     title: 'ПАРКІНГИ',},
