--- a/src/pug/pages/plannings.pug
+++ b/src/pug/pages/plannings.pug
@@ -44,7 +44,7 @@ block content
             input#level2(type="checkbox", name="" value="level" data-type="level" data-level="2")
             span Дворівневі
           label.planning-checkbox(for="commercial")
-            input#commercial(type="checkbox", name="" value="_type_object" data-type="_type_object" data-_type_object="2")
+            input#commercial(type="checkbox", name="" value="objecttype" data-type="objecttype" data-objecttype="2")
             span Комерція
         .plannings__filter-group
           img(src="./assets/images/eoselya-light.svg").plannings__filter-image-label
