--- a/src/assets/styles/layouts/home/home-double-screen.scss
+++ b/src/assets/styles/layouts/home/home-double-screen.scss
@@ -271,8 +271,8 @@ body {
     --color-text: #ffffff;
     --color-bg: #312b35;
     --color-link: #89639e;
-    --color-link-hover: #ce1352;
-    --button-filler: #ce1352;
+    --color-link-hover: var(--color-yellow);
+    --button-filler: var(--color-yellow);
 }
 
 .button {
