--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -106,3 +106,13 @@ header(class="header "+header_class)
         </button>
     </div>
 </template>
+<template data-installment-popup-text>
+    <div class="text-style-1920-h-2">Умови розтермінування</div>
+    <p>Розтермінування від забудовника — ваш зручний шлях до власної квартири! Якщо ви мрієте про власне житло, але не маєте можливості одразу оплатити повну суму, ми пропонуємо комфортні умови розтермінування, які дозволять вам стати власником квартири вже сьогодні.</p>
+    <p>Наше розтермінування передбачає індивідуальний підхід до кожного клієнта, прозорі умови та відсутність прихованих платежів. Ви можете комфортно сплачувати вартість квартири частинами протягом узгодженого періоду, не переплачуючи додаткових відсотків банкам і не витрачаючи час на складні формальності.</p>
+    <p>Обираючи розтермінування від забудовника, ви отримуєте надійність, стабільність та впевненість у майбутньому. Це вигідна можливість придбати житло за привабливою ціною, поступово сплачуючи за нього комфортними для вас платежами до завершення будівництва. Ми дбаємо про ваш комфорт та створюємо максимально доступні умови придбання омріяного житла.</p>
+    <p>Зверніться зручним для вас способом до нашого відділу продажу, аби ми розрахували найоптимальніші умови під ваші потреби.</p>
+    <button class="button-main" type="button" data-installment-popup-close data-callback-popup-call=""> 
+        <span>ЗАМОВИТИ ДЗВІНОК</span>
+    </button>
+</template>
