--- a/src/pug/includes/home/home-plannings.pug
+++ b/src/pug/includes/home/home-plannings.pug
@@ -79,7 +79,7 @@
     .installment-block
       .installment-block__text
         .installment-block__title(data-split-lines) Цікавить розтермінування?
-        button(type="button" data-popup-call).button-main
+        button(type="button" data-installment-popup-open).button-main
           span Дивитися умови
       .installment-block__img
         .installment-block__img-wrap
