--- a/src/pug/pages/single-flat.pug
+++ b/src/pug/pages/single-flat.pug
@@ -93,7 +93,7 @@ block content
       .installment-block
         .installment-block__text
           .installment-block__title Цікавить розтермінування?
-          button(type="button" data-popup-call).button-main
+          button(type="button" data-installment-popup-open).button-main
             span Дивитися умови
         .installment-block__img
           .installment-block__img-wrap
