--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -54,6 +54,9 @@
 		opacity: 1;
 		z-index: -1;
 	}
+	&.headroom--unpinned {
+		transform: translateY(-100%);
+	}
 	&.headroom--top {
 		// transform: translateY(10px);
 	}
