--- a/src/assets/styles/assets/interface.scss
+++ b/src/assets/styles/assets/interface.scss
@@ -91,12 +91,18 @@ div:where(.swal2-container).swal2-backdrop-show.installment-popup-container, div
   color: var(--color-black);
   .text-style-1920-h-2 {
     font-size: min(2.5vw, 48px);
-        font-style: normal;
-        font-weight: 300;
-        line-height: 120%;
-        letter-spacing: -0.96px;
-        text-transform: uppercase;
-        margin-bottom: 20px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 120%;
+    letter-spacing: -0.96px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    @include to(1024px){
+      font-size: 36px;
+    }
+    @include to(600px){
+      font-size: 32px;
+    }
 
   }
   p {
