--- a/src/assets/styles/assets/base.scss
+++ b/src/assets/styles/assets/base.scss
@@ -72,6 +72,9 @@ body {
 	font-weight: 300;
 	color: var(--color-white);
 	background-color: var(--color-black);
+	@media screen and (min-width:1025px){
+		font-size: Min(pxWidthInVw(16), 16px);
+	}
 	&.popup-open {
 		overflow: hidden;
 	}
