--- a/src/assets/styles/layouts/home/home-gallery-screen.scss
+++ b/src/assets/styles/layouts/home/home-gallery-screen.scss
@@ -102,7 +102,8 @@
 	&__img-inner {
 		width: 100%;
 		height: 100%;
-		background-size: cover;
+		// background-size: cover;
+		background-size: contain;
 		background-position: 50% 50%;
 		background-repeat: no-repeat;
 		will-change: transform;
