--- a/src/assets/styles/pages/single-construction.scss
+++ b/src/assets/styles/pages/single-construction.scss
@@ -80,6 +80,7 @@
             position: relative;
             padding-bottom: 52.5%;
             margin-top: 20px;
+            iframe,
             video {
                 position: absolute;
                 top: 0;
@@ -87,6 +88,7 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                border: none;
             }
         }
     }
